--- a/live-chat/package.json
+++ b/live-chat/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "date-fns": "^2.28.0",
     "firebase": "8.0.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.13"
